--- a/structure_dam.html
+++ b/structure_dam.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Animasi Shock Wave Ledakan ke Bangunan (Auto Rewind)</title>
+  <title>Animated Simulation of Explosion and Shock Wave Effects on a Building Structure</title>
   <style>
     body { background: #f8fafc; margin: 0; padding: 0; }
     #scene {
@@ -123,7 +123,7 @@
 
     function blastSequence() {
       resetScene(false); // reset tanpa matikan autoLoop
-      document.getElementById('caption').innerHTML = "Shock wave merambat & menghancurkan bangunan satu per satu...<br>Auto rewind aktif!";
+      document.getElementById('caption').innerHTML = "The shock wave propagates through the medium, causing progressive structural failure of buildings in sequence.<br> Auto rewind active! <br> Design by Virda NL";
       // Buat shockwave animasi lingkaran besar (melewati semua)
       waveElem = document.createElement('div');
       waveElem.className = 'wave';
